# dmac-ansible

./: .ansible-lint  .ansible-lint.yaml  .gitignore  .pre-commit-config.yaml  README.md  ansible.cfg  pyproject.toml  requirements.txt  requirements.yml
docs/: configuration.md  development.md  docker-role.md  password-generation.md
inventories/: inventory.ini
inventories/group_vars/all/: example.vault.yaml  vars  vars.yaml  vault  vault.yaml
playbooks/: ubuntu.yml
roles/neovim/: README.md
roles/neovim/defaults/: main.yaml
roles/neovim/files/nvim/: README.md  init.lua  lazy-lock.json
roles/neovim/files/nvim/docs/: alpha.md  bufferline.md  (+17 more)
roles/neovim/tasks/: main.yaml
roles/neovim/templates/: init.lua.j2
roles/ubuntu/: README.md
roles/ubuntu/defaults/: main.yaml
roles/ubuntu/files/: dmac.pub  svmt.pub
roles/ubuntu/files/custom_scripts/: fzf_explorer.sh
roles/ubuntu/handlers/: main.yml
roles/ubuntu/tasks/: apt_packages.yaml  locale.yaml  main.yaml  snap_packages.yaml  users.yaml
roles/ubuntu/templates/: aliases_dmac.j2  aliases_svmt.j2  functions_dmac.j2  sshd_config.j2  sudoers.j2
roles/zerotier/: README.md
roles/zerotier/defaults/: main.yaml
roles/zerotier/files/: set_facts.sh
roles/zerotier/tasks/: authorize_node.yaml  install.yaml  join_network.yaml  main.yaml
roles/zsh/: README.md
roles/zsh/defaults/: main.yaml
roles/zsh/files/: p10k_zsh
roles/zsh/tasks/: install-oh-my-zsh.yaml  install-p10k-fonts.yaml  install-p10k.yaml  install-zsh-plugins.yaml  install-zsh.yaml  install.yaml  main.yaml
roles/zsh/templates/: zshrc.j2
(+22 files in other folders)
