[project]
name = "dmac-ansible"
version = "0.1.0"
description = "Ansible automation repository for managing infrastructure "
authors = [
    { name = "Daniel Macuare" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=12.2.0",
    "passlib>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.4.0",
    "ansible-lint>=25.11.0; platform_system != 'Windows'",
    "djlint>=1.36.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.4.0",
    "ansible-lint>=25.11.0; platform_system != 'Windows'",
    "djlint>=1.36.4",
]
package = false
